# VoiceAssistant

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.a5c1e87  CONTRIBUTING.md  COPYING  INSTALL.md  INSTALL_8md.html  README.md  README_8md.html  SECURITY.md  VoiceAssistant.pro  annotated.html  annotated_dup.js  base_8h.html  base_8h.js  base_8h__incl.map  base_8h__incl.md5  base_8h_source.html  bridge_8h.html  bridge_8h.js  bridge_8h__dep__incl.map  bridge_8h__dep__incl.md5  bridge_8h__incl.map  bridge_8h__incl.md5  bridge_8h_source.html  classPluginBridge-members.html  classPluginBridge.html  classPluginBridge.js  classPluginBridge__inherit__graph.map  classPluginBridge__inherit__graph.md5  classPluginInterface-members.html  classPluginInterface.html  classPluginInterface.js  classPluginInterface__coll__graph.map  classPluginInterface__coll__graph.md5  classSettingsWidget-members.html  classSettingsWidget.html  classSettingsWidget.js  (+37 more)
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autopr.yml  build.yml  release.yml  todo-to-issue.yml  website.yml
cmake/: Dirs.cmake  DownloadVosk.cmake  FindVosk.cmake  FindWhisper.cmake  Packaging.cmake  Plugins.cmake  Translation.cmake  TranslationUtils.cmake
commands/: README.md  de-DE  en-US
commands/de/: default.json
commands/en/: default.json
docs/: Doxyfile  index.html  script.js  styles.css
docs/doxygen-awesome-css/doxygen-custom/: header.html
packaging/: VoiceAssistant.desktop  VoiceAssistant.desktop.in
packaging/flatpak/: com.github.tim-gromeyer.VoiceAssistant.yml
plugins/: README.md  base.h  bridge.h  settingswidget.h  utils.h
plugins/mediaControl/: CMakeLists.txt  mediaControl.cpp  mediaControl.h
plugins/smartthingsPlugin/: CMakeLists.txt  devicemanager.cpp  devicemanager.h  language_commands.json  languagemanager.cpp  languagemanager.h  networkhandler.cpp  networkhandler.h  ressources.qrc  smartthingsplugin.cpp  smartthingsplugin.h  smartthingsplugin.json  smartthingssettingswidget.cpp  smartthingssettingswidget.h
plugins/testPlugin/: CMakeLists.txt  plugintest.cpp  plugintest.h  translations_de_DE.ts
plugins/weather/: CMakeLists.txt  position.cpp  position.h  weatherdata.cpp  weatherdata.h  weatherplugin.cpp  weatherplugin.h
ressources/: ressources.qrc
ressources/logo/: Icon.icns  icons.sh
scripts/: clang-format.sh  createDocumentation
search/: all_1.js  all_2.js  all_6.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_2.js  files_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js
speechtotext/: CMakeLists.txt  speechtotextplugin.h
speechtotext/vosk-api/: CMakeLists.txt  voskplugin.cpp  voskplugin.h
speechtotext/whisper-cpp/: CMakeLists.txt  whisperplugin.cpp  whisperplugin.h
src/: commanddialog.cpp  commanddialog.h  commands.cpp  commands.h  commandwizard.cpp  commandwizard.h  global.cpp  global.h  jokes.cpp  jokes.h  listwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  modeldownloader.cpp  modeldownloader.h  pluginloader.cpp  pluginloader.h  recognizer.cpp  recognizer.h  settings.cpp  settings.h  settingsdialog.cpp  settingsdialog.h  sliderwithtext.cpp  sliderwithtext.h  speechtotextsettings.cpp  speechtotextsettings.h  texttospeechsettings.cpp  texttospeechsettings.h  utils.cpp  utils.h
src/settings/: settingsdialog.h  texttospeechsettings.h
tests/: CMakeLists.txt  test_load_plugins.cpp
translations/: VoiceAssistant_de.ts  VoiceAssistant_de_DE.ts  VoiceAssistant_en.ts  VoiceAssistant_fr.ts  VoiceAssistant_he.ts  VoiceAssistant_it.ts  VoiceAssistant_nb_NO.ts  VoiceAssistant_ru.ts  VoiceAssistant_ta.ts  translations.qrc  update.py  update.sh
ui/: addCommand.ui  mainwindow.ui  modeldownloader.ui  settingsdialog.ui
